<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_welcome_text">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/margin_linear_layout_elements_app"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/female_avatar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:maxLength="40" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="40" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_alternate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_alternate_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alternate_number"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_save_profile"
            style="@style/btn_pink_background"
            android:layout_width="@dimen/width_app_btn"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:enabled="false"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>